--- a/Puzzle/en.lproj/MainStoryboard.storyboard
+++ b/Puzzle/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,107 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fdK-yG-3Ja">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="155" id="5Zq-YB-DIl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="开始游戏">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="start:" destination="2" eventType="touchUpInside" id="3Ya-KX-6um"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fu5-f6-w6e">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="254" id="gbU-cf-ZCK"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="3*3"/>
+                                    <segment title="4*4"/>
+                                    <segment title="5*5"/>
+                                </segments>
+                            </segmentedControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wrx-iA-Smk" customClass="PuzzleBoardView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdy-XP-sP3">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="153" id="mXl-lD-QfS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="选择图片">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="selectImage:" destination="2" eventType="touchUpInside" id="84r-KL-xCb"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="wrx-iA-Smk" secondAttribute="centerX" type="user" id="6of-YX-bdl"/>
+                            <constraint firstItem="rdy-XP-sP3" firstAttribute="leading" secondItem="wrx-iA-Smk" secondAttribute="leading" type="default" id="8fO-Jd-8Py"/>
+                            <constraint firstAttribute="bottom" secondItem="fu5-f6-w6e" secondAttribute="bottom" constant="292" id="AG6-bX-aDC"/>
+                            <constraint firstItem="rdy-XP-sP3" firstAttribute="baseline" secondItem="fdK-yG-3Ja" secondAttribute="baseline" type="default" id="G2b-BU-Jjs"/>
+                            <constraint firstItem="wrx-iA-Smk" firstAttribute="centerX" secondItem="fu5-f6-w6e" secondAttribute="centerX" type="default" id="JNW-rw-vxK"/>
+                            <constraint firstAttribute="bottom" secondItem="rdy-XP-sP3" secondAttribute="bottom" constant="102" id="MbU-iy-sne"/>
+                            <constraint firstItem="wrx-iA-Smk" firstAttribute="top" secondItem="5" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Q0l-L3-7w5"/>
+                            <constraint firstItem="wrx-iA-Smk" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="84" id="Wos-uy-Gkk"/>
+                            <constraint firstAttribute="bottom" secondItem="wrx-iA-Smk" secondAttribute="bottom" constant="384" id="uLw-cg-edG"/>
+                            <constraint firstItem="fdK-yG-3Ja" firstAttribute="trailing" secondItem="wrx-iA-Smk" secondAttribute="trailing" type="default" id="vz2-cW-eLh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="board" destination="wrx-iA-Smk" id="RWR-e4-MZF"/>
+                        <outlet property="boardSize" destination="fu5-f6-w6e" id="Dwb-IT-PNw"/>
+                        <outlet property="selectButton" destination="rdy-XP-sP3" id="PKn-X8-H8d"/>
+                        <outlet property="startButton" destination="fdK-yG-3Ja" id="fN9-uk-DKi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-2098" y="-1763"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PuzzleBoardView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PuzzleBoardView.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="selectImage:"/>
+                <relationship kind="action" name="start:"/>
+                <relationship kind="outlet" name="board" candidateClass="PuzzleBoardView"/>
+                <relationship kind="outlet" name="boardSize" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="selectButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="startButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
